--- a/User.Api/Readme
+++ b/User.Api/Readme
@@ -227,3 +227,6 @@ curl http://10.211.55.5:5000/v2/_catalog
 
 #打 TAG
 docker tag userapi:test 10.211.55.5:5000/userapi:test
+
+#consul 
+consul agent --dev 
