--- a/Readme
+++ b/Readme
@@ -230,3 +230,8 @@ docker tag userapi:test 10.211.55.5:5000/userapi:test
 
 #consul 
 consul agent --dev 
+
+#rabbitMQ
+https://www.cnblogs.com/yy-cola/p/11089800.html
+#设置rabbitMQ管理界面帐号密码并启动
+docker run -dit --name Myrabbitmq -e RABBITMQ_DEFAULT_USER=admin -e RABBITMQ_DEFAULT_PASS=admin -p 8080:15672 -p 5672:5672 rabbitmq:3-management
